#4 - Student registration (#101)
* add student regstration

* Apply suggestions from code review


* apply code review suggestions

* Apply suggestions from code review

* Apply suggestions from code review

* Remove unnecessary docblocks, use translation key for validation

* Move student registration route to api.php and register API routing in bootstrap

* Update test URLs to use /api prefix after moving route to api.php

* Apply suggestions from code review


* Apply review suggestions

---------
