# app/Models/User.php
@@ -4,17 +4,24 @@ declare(strict_types=1);
 
 namespace App\Models;
 
+use App\Enums\UserRole;
 use Carbon\Carbon;
+use Illuminate\Database\Eloquent\Concerns\HasUuids;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
 
 /**
- * @property string $name
+ * @property string $id
+ * @property string $first_name
+ * @property string $last_name
  * @property string $email
  * @property string $password
- * @property Carbon $email_verified_at
+ * @property UserRole $role
+ * @property ?string $university
+ * @property ?Carbon $terms_accepted_at
+ * @property ?Carbon $email_verified_at
  * @property Carbon $created_at
  * @property Carbon $updated_at
  */
@@ -22,12 +29,17 @@ class User extends Authenticatable
 {
     use HasApiTokens;
     use HasFactory;
+    use HasUuids;
     use Notifiable;
 
     protected $fillable = [
-        "name",
+        "first_name",
+        "last_name",
         "email",
         "password",
+        "role",
+        "university",
+        "terms_accepted_at",
     ];
     protected $hidden = [
         "password",
@@ -37,7 +49,9 @@ class User extends Authenticatable
     protected function casts(): array
     {
         return [
+            "role" => UserRole::class,
             "email_verified_at" => "datetime",
+            "terms_accepted_at" => "datetime",
             "password" => "hashed",
         ];
     }
